# TPFINAL

./: Animaciones.c  Animaciones.h  CMakeLists.txt  Doxyfile  IEvents.c  IEvents.h  allegro.h  allegroLib.c  allegroLib.h  animacion.c  animacion.h  audio.h  configuracion.h  data.c  data.h  disdrv.h  entidad.c  entidades.c  entidades.h  fisica.c  fisica.h  gamelogic.c  gamelogic.h  graficos.c  graficos.h  header.h  joydrv.h  level.c  level.h  main.c  mapa.c  mapa.h  matiasBrosGame.h  menu.c  menu.h  prueba.c  prueba.h  raspi.h  render.c  render.h  (+5 more)
Proyecto con makefile/: MakePC.mak  MakeRP.mak  animacion.c  audio.c  configuracion.h  entidades.c  fisica.c  gamelogic.c  gamelogic.h  level.c  main  render.c
data/: menuData.txt
